# msc-thesis

./: .gitattributes  .gitignore  .gitmodules  refs.md  synth-01-benchmarks.key  timeline.org
code/: .gitignore  TODO.org  outsystems.txt  package.yaml
code/.old/hs-2nd-take/: TAGS  mine.cabal
code/.old/hs-2nd-take/outsystems/Language/OutSystems/: Evaluator.hs
code/HsAnalytics/analytics/: analytics.cabal
code/HsAnalytics/analytics/src/: Counter.hs  Main.hs  OutSystems.hs  exprs-in-between-3-and-6.jsonl
code/HsAnalytics/src/: Analytics.hs  Counter.hs  OutSystems.hs
code/RktAnalytics/: analytics.rkt
code/current/: TODO.md  mine.cabal  setup.py
code/current/dataset/: BuiltinFunctions.xml  README.md  exprs-01-tmp.jsonl  exprs-01.jsonl  exprs-short300-dsl01-size2.jsonl  exprs-short300-dsl01-size4.jsonl
code/current/outsystems/: OutSystems.hs
code/current/src/: __init__.py  bench_synthesis.py  demo_outsystems.py  main.py  outsystems.lark  readme.md  test_sym_functions.py  test_synthesis.py  timewith.py
code/current/test/: test_all.py  timewith.py
code/data/results/: results-builtin-3-6.txt
code/dataset/: find_consts.py  find_rec.py  find_sizes.py  requirements.txt  script.py  setwise_check_solved.py  whole_check_solved.py
code/dataset/examples/: examples-01.json  examples-02.json  examples-03.json  examples-04.json  examples-05.json  examples-06.json  examples-07.json  examples-08.json  examples-09.json  examples-10.json  examples-11.json  examples-12.json  examples-13.json  examples-14.json  examples-15.json  examples-16.json  examples-17.json  examples-18.json  examples-19.json  examples-20.json  examples-21.json  examples-22.json  examples-23.json  examples-24.json  examples-25.json  examples-26.json  examples-27.json  examples-28.json  examples-29.json  examples-30.json  examples-31.json  examples-32.json  examples-33.json  examples-34.json  examples-35.json  examples-36.json  examples-37.json  examples-38.json  examples-39.json  examples-40.json  (+59 more)
code/dataset/jsonl/: templates-concat-lower-etc.jsonl  templates-with-examples.jsonl
code/dataset/outsystems_lang/: __init__.py
code/haskell/: .ghc.environment.x86_64-darwin-8.6.4  Components.hs  LICENSE  Types.hs  synthesis.cabal
code/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
code/haskell/src/: Components.hs  Main.hs  ReadExample.hs  RunBench.hs  RunSynth.hs  Synth.hs  Types.hs
code/old/hs-1st-take/: TODO.org  package.yaml
code/old/hs-2nd-take/: .gitignore
code/python/: .gitignore
code/python/dataset/: README.md  exprs-short300-dsl01-size3.jsonl  exprs-short300-dsl01-size5.jsonl  exprs-short300-dsl01-size6.jsonl  extra-templates.jsonl  filter.py  templates-concat-etc.jsonl  templates-with-examples.jsonl  templates.jsonl
code/python/src/: __main__.py  main.py  read_example.py  runbench.py  runbench4  runbench8  runsynth.py  test_sym_functions.py  test_synthesis.py
code/repl/: Main.hs
code/setwise/: Dockerfile  Makefile  README.md  TAGS  demo.json  demo1  demo2.json  requirements.txt
code/setwise/src/: RunSynth.hs  runsynth.py
code/src/Examples/: Evaluator.hs  Expressions.hs  Generator.hs  Parser.hs
code/sygus/: components-dsl01-size02-bench01.smt2  smtlib-test-1.smt2  substr.smt2  sygus-test-1.sl  sygus-test-2.sl  sygus-test-3.sl  synth-dsl01-example.smt2  type-test.smt2
code/whole/: .gitignore
code/whole/src/: Constraints.hs  ReadExample.hs  RunBench.hs  RunSynth.hs  Synth.hs  runbench8
outsystems-presentation/content/: presentation.tex
presentations/: demo.key  presentation-tips.org
presentations/defense/: Makefile  defense.key
presentations/defense/content/: presentation.tex
presentations/outsystems-presentation/: .gitignore  .latexmkrc
thesis/: .gitignore  .latexmkrc  Evaluation.tex  FrontCover.tex  FutureWork.tex  Glossary.tex  Introduction.tex  Makefile  Nomenclature.tex  Preamble.tex  Preliminaries.tex  RelatedWork.tex  Thesis.tex  Thesis_Abstract.tex  Thesis_Acknowledgements.tex  Thesis_Appendix.tex  Thesis_Conclusions.tex  Thesis_Dedication.tex  Thesis_Evaluation.tex  Thesis_FrontCover.tex  Thesis_FutureWork.tex  Thesis_Glossary.tex  Thesis_Introduction.tex  Thesis_Nomenclature.tex  Thesis_Preamble.tex  Thesis_Preliminaries.tex  Thesis_RelatedWork.tex  Thesis_Resumo.tex  Thesis_Software.tex  Thesis_bib_DB.bib  acronym.sty  planning.org
thesis/RelatedWork/: Challenges.tex  RelatedWork.tex  Specifications.tex
thesis/content/: Acronyms.tex  EAPreamble.tex  EAReferences.bib  ExtendedAbstract.tex  Glossary.tex  Preamble.tex  References.bib  Thesis.tex
thesis/content/assets/: Diagrams.key
thesis/content/document/: Abstract.tex  Abstract_content.tex  Acknowledgements.tex  Background.tex  (+18 more)
thesis/document/: Appendix.tex  Dedication.tex  Introduction.tex  Lists.tex  Resumo.tex
thesis/notes/: bodik-icfp15-talk.org
(+321 files in other folders)
