cabal-version:       2.4
name:                synthesis
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              rodamber
maintainer:          rodrigoambernardo@gmail.com
extra-source-files:  CHANGELOG.md

executable synthesis
  main-is:             Main.hs
  other-modules:       Components
                     , Constraints
                     , Synth
                     , Types
  build-depends:       base ^>=4.12.0.0
                     , containers ^>=0.6.0.1
                     , mtl
                     , sbv
                     , timeit
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -freverse-errors
  -- extensions: Strict