cabal-version:       2.4
name:                synthesis
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              rodamber
maintainer:          rodrigoambernardo@gmail.com
extra-source-files:  CHANGELOG.md

executable outsynth2
  main-is:             RunSynth.hs
  other-modules:       Components
                     , Constraints
                     , ReadExample
                     , Synth
                     , Types
  build-depends:       aeson == 1.4.2.0
                     , base ^>=4.12.0.0
                     , bytestring
                     , containers ^>=0.6.0.1
                     , mtl
                     , optparse-applicative
                     , sbv
                     , timeit
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -freverse-errors -main-is RunSynth

executable runbench
  main-is:           RunBench.hs
  other-modules:     RunSynth
                   , Components
                   , Constraints
                   , ReadExample
                   , Synth
                   , Types
  build-depends:     aeson == 1.4.2.0
                   , base ^>=4.12.0.0
                   , bytestring
                   , containers ^>=0.6.0.1
                   , directory
                   , mtl
                   , optparse-applicative
                   , process
                   , sbv
                   , timeit
  hs-source-dirs:    src
  default-language:    Haskell2010
  ghc-options: -freverse-errors -main-is RunBench