name:                mine
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/rodamber/mine#readme
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Bernardo
maintainer:          rodrigoambernardo@gmail.com
copyright:           2019 Rodrigo Bernardo
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable outsystems
  hs-source-dirs:     outsystems
  main-is:            OutSystems.hs
  default-language:   Haskell2010

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude

  build-depends:      base >= 4.7 && < 5
                    , containers
                    , megaparsec
                    , parser-combinators
                    , pretty
                    , relude
                    , text

  ghc-options:      -freverse-errors 
                    -fno-warn-unused-imports 
                    -fno-warn-unused-top-binds 

  other-modules:      Language.OutSystems.Cast
                    , Language.OutSystems.Evaluator
                    , Language.OutSystems.Lang
                    , Language.OutSystems.Parser
                    , Language.OutSystems.Pretty
                    , Language.OutSystems.Serialize
                    , Language.OutSystems.Untyped


