name:                analytics
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/rodamber/analytics#readme
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Bernardo
maintainer:          rodrigoambernardo@gmail.com
copyright:           2019 Rodrigo Bernardo
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable analytics
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
  ghc-options:        -freverse-errors 
                      -fno-warn-unused-imports 
                      -fno-warn-unused-top-binds 

  build-depends:      base >= 4.7 && < 5
                    , aeson
                    , bytestring
                    , containers
                    , relude
  other-modules:      Counter
                    , OutSystems
